updated models and camera

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>04 - Webpack</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="tab"></div>
-    <button class="btn">GO BACK</button>
+    <div class="tab">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo laudantium
+      dolorum architecto voluptatem ex! Nesciunt amet a corporis molestiae quos!
+      <button class="btn">GO BACK</button>
+    </div>
 
     <nav class="nav-bar">
       <ul>
